--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3'
+version: '3.7'
 services:
   api:
-    image: reg-api:latest
-    environment:
-      - app_env=production
-    build: .
+    #image: reg-api:latest
+    build:
+      context: .
+      args:
+        app_env: production
+
+    image: reg-api
     ports:
       - '8081:8081'
     #sudo docker run -d -i -t -p 8081:8081 c586
