--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,4 +2,9 @@ version: '3.7'
 services:
   api:
     container_name: reg-api
-    image: docker.pkg.github.com/moomdate/scheduler-api/api:${version}
+    image: docker.pkg.github.com/moomdate/sut-reg-api/reg-api:${version}
+
+networks:
+  default:
+    external:
+      name: api-nw
