--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   api:
     container_name: reg-api
-    image: docker.pkg.github.com/moomdate/sut-reg-api/reg-api:${version}
+    image: docker.pkg.github.com/moomdate/sut-reg-api/reg-api:#VERSION
 
 networks:
   default:
